--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>LoginPage</title>
+    <title>LoginPages123</title>
     <link rel="stylesheet" href="styleLogin.css">
 </head>
 
