--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
 <body>
     <div class="center">
         <h1>Login</h1>
-        <form method="post" action="/homeadmin">
+        <form method="post" action="/home">
             <div class="text">
                 <input type="text" required>
                 <span></span>
