--- a/public/styleadmin.css
+++ b/public/styleadmin.css
@@ -85,3 +85,53 @@ input{
     margin-top: 5px;
     margin-left: 243px;
 }
+
+
+.content{
+    display: grid;
+    grid-template-columns: 250px 250px 250px;
+    grid-template-rows: 250px 250px ;
+    grid-template-areas: 
+    "cont1 cont2 cont3"
+    "cont4 cont5 cont6";
+    align-items: center;
+    justify-content: center;
+    padding: 80px 50px 50px 50px;
+}
+.content a{
+    font-size: 25px;
+    justify-content: center;
+    align-items: center;
+    display: grid;
+    text-decoration: none;
+
+}
+
+a.a1{
+    color: black;
+    grid-area: cont1;
+}
+a.a2{
+    color: black;
+    grid-area: cont2;
+}
+a.a3{
+    color: black;
+    grid-area: cont3;
+}
+a.a4{
+    color: black;
+    grid-area: cont4;
+}
+a.a4{
+    color: black;
+    grid-area: cont4;
+}
+a.a5{
+    color: black;
+    grid-area: cont5;
+}
+a.a6{
+    color: black;
+    grid-area: cont6;
+}
