--- a/views/perioda.ejs
+++ b/views/perioda.ejs
@@ -14,6 +14,7 @@
         <img src="/assets/user.png" alt="">
     </header>
     <div class="sidenav">
+        <a href="home">Home</a>
         <a href="kecamatan">Kecamatan</a>
         <a href="kelurahan">Kelurahan</a>
         <a href="rw">RW</a>
@@ -64,7 +65,7 @@
             
         </table>
 
-        <a href="menambahRW">
+        <a href="addperioda">
             <input type="submit" value="Tambah" name='addNewRole'>
         </a>
     </div>
