--- a/views/kecamatan.ejs
+++ b/views/kecamatan.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleadmin.css">
-    <title>Document</title>
+    <title>Kecamatan</title>
 </head>
 <body>
     <header class="header">
@@ -18,7 +18,7 @@
         <a href="kecamatan">Kecamatan</a>
         <a href="kelurahan">Kelurahan</a>
         <a href="rw">RW</a>
-        <a href="users">User</a>
+        <a href="users">Users</a>
         <a href="produk">Produk</a>
         <a href="perioda">Perioda Pemesan</a>
     </div>
