--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>LoginPages123</title>
+    <title>Login</title>
     <link rel="stylesheet" href="styleLogin.css">
 </head>
 
@@ -12,12 +12,12 @@
         <h1>Login</h1>
         <form method="post" action="/home">
             <div class="text">
-                <input type="text" required>
+                <input type="text" required name="username">
                 <span></span>
                 <label>Username</label>
             </div>
             <div class="text">
-                <input type="password" required>
+                <input type="password" required name="password">
                 <span></span>
                 <label>Password</label>
             </div>
