--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleadmin.css">
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
     <header class="header">
@@ -17,7 +17,7 @@
             <a class="a1" href="kecamatan">Kecamatan</a>
             <a class="a2" href="kelurahan">Kelurahan</a>
             <a class="a3" href="rw">RW</a>
-            <a class="a4" href="users">User</a>
+            <a class="a4" href="users">Users</a>
             <a class="a5" href="produk">Produk</a>
             <a class="a6" href="perioda">Perioda Pemesan</a>
         </div>
