menambah page warga (unfinished)

--- a/views/StafPenjualan/stafperiodepesanan.ejs
+++ b/views/StafPenjualan/stafperiodepesanan.ejs
@@ -14,8 +14,8 @@
         <img src="/assets/user.png" alt="">
     </header>
     <div class="sidenav">
-        <a href="kecamatan">Perioda Pemesan</a>
-        <a href="kelurahan">Status Pesanan Warga</a>
+        <a href="stafperiodepesanan">Perioda Pemesan</a>
+        <a href="stafstatuspembayaran">Status Pesanan Warga</a>
     </div>
     <div class="main">
         <p>Pilih Perioda Pemesanan </p>
