--- a/views/Warga/homewarga.ejs
+++ b/views/Warga/homewarga.ejs
@@ -9,13 +9,13 @@
 </head>
 <body>
     <header class="header">
-        <p>Staf Penjualan</p>
+        <p>Warga</p>
         <a href="logout"><p>Logout</p></a>
         <img src="/assets/user.png" alt="">
     </header>
         <div class="content">
-            <a class="a1" href="stafperiodepesanan">Periode Pemesanan</a>
-            <a class="a2" href="stafstatuspembayaran">Status Pembayaran</a>
+            <a class="a1" href="changepass">Change Password</a>
+            <a class="a2" href="beliminyak">Beli Minyak</a>
         </div>
 </body>
 </html>
