--- a/views/Warga/warga.ejs
+++ b/views/Warga/warga.ejs
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleadmin.css">
-    <title>Home</title>
+    <title>Document</title>
 </head>
 <body>
     <header class="header">
-        <p>Staf Penjualan</p>
+        <p>Warga</p>
         <a href="logout"><p>Logout</p></a>
         <img src="/assets/user.png" alt="">
     </header>
-        <div class="content">
-            <a class="a1" href="stafperiodepesanan">Periode Pemesanan</a>
-            <a class="a2" href="stafstatuspembayaran">Status Pembayaran</a>
-        </div>
+    <div class="sidenav">
+        <a href="changepass">Ganti Password</a>
+        <a href="beliminyak">Beli Minyak</a>
+    </div>
+
 </body>
 </html>
