--- a/views/users.ejs
+++ b/views/users.ejs
@@ -14,7 +14,7 @@
         <img src="/assets/user.png" alt="">
     </header>
     <div class="sidenav">
-        <a href="home">Home</a>
+        <a href="homeadmin">Home</a>
         <a href="kecamatan">Kecamatan</a>
         <a href="kelurahan">Kelurahan</a>
         <a href="rw">RW</a>
