login admin  dan session admin sudah bisa

--- a/views/Admin/addkecamatan.ejs
+++ b/views/Admin/addkecamatan.ejs
@@ -12,7 +12,7 @@
         <h2>Menambah Kecamatan</h2>
         <form method="post" action="/kecamatan">
             <div class="text">
-                <input type="text" required>
+                <input type="text" required name="kecamatan">
                 <span></span>
                 <label>Kecamatan</label>
             </div>
