meneyelesaikan form input pada admin

--- a/views/Admin/addkelurahan.ejs
+++ b/views/Admin/addkelurahan.ejs
@@ -12,12 +12,12 @@
         <h2>Menambah Kelurahan</h2>
         <form method="post" action="/kelurahan">
             <div class="text">
-                <input type="text" required>
+                <input type="text" required name="kelurahan">
                 <span></span>
                 <label>Nama Kelurahana</label>
             </div>
             <div class="text">
-                <input type="text" required>
+                <input type="text" required name="kecamatan">
                 <span></span>
                 <label>Nama Kecamatan</label>
             </div>
