--- a/views/Admin/addperioda.ejs
+++ b/views/Admin/addperioda.ejs
@@ -12,17 +12,17 @@
         <h2>Menambah Perioda</h2>
         <form method="post" action="/addperioda">
             <div class="text">
-                <input type="text" required>
+                <input type="text" required name="namaperiode">
                 <span></span>
                 <label>Nama Perioda</label>
             </div>
             <div class="text">
-                <input type="date" required>
+                <input type="date" required name="tanggalmulai">
                 <span></span>
                 <label class="date">Tanggal Mulai</label>
             </div>
             <div class="text">
-                <input type="date" required>
+                <input type="date" required name="tanggalberakhir">
                 <span></span>
                 <label class="date">Tanggal Berakhir</label>
             </div>
