--- a/views/Admin/addproduk.ejs
+++ b/views/Admin/addproduk.ejs
@@ -12,12 +12,12 @@
         <h2>Menambah Produk</h2>
         <form method="post" action="/addproduk">
             <div class="text">
-                <input type="text" required>
+                <input type="text" required name="namaproduk">
                 <span></span>
                 <label>Nama Produk</label>
             </div>
             <div class="text">
-                <input type="text" required>
+                <input type="text" required name="harga">
                 <span></span>
                 <label>Harga perliter</label>
             </div>
