--- a/views/Admin/addrw.ejs
+++ b/views/Admin/addrw.ejs
@@ -12,22 +12,27 @@
         <h2>Menambah RW</h2>
         <form method="post" action="/addrw">
             <div class="text">
-                <input type="text" required>
+                <input type="text" required name="norw">
                 <span></span>
                 <label>RW</label>
             </div>
             <div class="text">
-                <input type="text" required>
+                <input type="text" required name="namaketua">
                 <span></span>
                 <label>Nama Ketua Rw</label>
             </div>
             <div class="text">
-                <input type="text" required>
+                <input type="text" required name="username">
                 <span></span>
-                <label>Alamat</label>
+                <label>Username</label>
             </div>
             <div class="text">
-                <input type="text" required>
+                <input type="text" required name="password">
+                <span></span>
+                <label>Password</label>
+            </div>
+            <div class="text">
+                <input type="text" required name="kelurahan">
                 <span></span>
                 <label>Kelurahan</label>
             </div>
