kepdin, rt, warga

--- a/views/KepDinas/rekapitulasikec.ejs
+++ b/views/KepDinas/rekapitulasikec.ejs
@@ -26,7 +26,7 @@
         <table>
             <tr>
                 <th>No</th>
-                <th>RW</th>
+                <th>Kelurahan</th>
                 <th>Nama Ketua</th>
                 <th>Alamat</th>
                 <th>Kabupaten</th>
