--- a/views/RT/akunwarga.ejs
+++ b/views/RT/akunwarga.ejs
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <title>Buat Akun Warga
     </title>
-    <link rel="stylesheet" href="styleLogin.css">
+    <link rel="stylesheet" href="add.css">
 </head>
 
 <body>
     <div class="center">
-        <h1>Buat Akun Warga</h1>
+        <h2>Buat Akun Warga</h2>
         <form method="post" action="/home">
             <div class="text">
                 <input type="text" required name="username">
