--- a/public/styleadmin.css
+++ b/public/styleadmin.css
@@ -272,3 +272,10 @@ a.a6{
     background-image: -webkit-linear-gradient(left, #00c5ff 0%, #00c5ff 47%, #0383a9 50%, #0383a9 100%);
     background-image: linear-gradient(to right, #00c5ff 0%, #00c5ff 47%, #0383a9 50%, #0383a9 100%);
   }
+  .inputlist{
+    display: inline-grid;
+    line-height: 0;
+    margin: 0;
+    padding: 0;
+    width: 0;
+  }
