--- a/views/RT/pesananwarga.ejs
+++ b/views/RT/pesananwarga.ejs
@@ -26,7 +26,7 @@
                 <th>Nama Warga</th>
                 <th>Alamat</th>
                 <th>Jumlah Pesanan</th>
-                <th>Status Pesanan</th>
+                <th>Status Pembayaran</th>
             </tr>
             <tr>
                 <td>001</td>
