--- a/views/Warga/changepass.ejs
+++ b/views/Warga/changepass.ejs
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <title>Changepass
     </title>
-    <link rel="stylesheet" href="styleLogin.css">
+    <link rel="stylesheet" href="add.css">
 </head>
 
 <body>
     <div class="center">
-        <h1>Ganti Password</h1>
+        <h2>Ganti Password</h2>
         <form method="post" action="/home">
             <div class="text">
                 <input type="password" required name="password">
@@ -24,6 +24,7 @@
             </div>
             <br>
             <input type="submit" value="Ganti Password">
+            <a href="homewarga"><input type="button" value="Batal"></a>
             <br><br><br>
     </div>
     </form>
