rw,rt warga sudah bisa menampilkan data yang dimiliki dan rt dan rw sudah menampilkan rt dan warganya masing masing

--- a/views/Admin/perioda.ejs
+++ b/views/Admin/perioda.ejs
@@ -13,7 +13,7 @@
         <a href="logout"><p>Logout</p></a>
         <img src="/assets/user.png" alt="">
     </header>
-    <div class="sidenav">
+    <div class="sidenav">z
         <a href="homeadmin">Home</a>
         <a href="kecamatan">Kecamatan</a>
         <a href="kelurahan">Kelurahan</a>
@@ -39,7 +39,7 @@
                     <td><%=per.nama_perioda %></td>
                     <td><%= per.tanggal_mulai %></td>
                     <td><%= per.tanggal_berakhir %></td>
-                    <td><a href="perioda/hapus/<%=per.id_perida %>" >hapus</a> </td>
+                    <td><a href="perioda/hapus/<%=per.id_perioda %>" >hapus</a> </td>
                     <td><a href="">Edit</a></td>
                 </tr>
                 <% i +=1; %> 
