--- a/views/Admin/rw.ejs
+++ b/views/Admin/rw.ejs
@@ -41,7 +41,7 @@
                     <td><%= rw.nama_ketua_rw %></td>
                     <td><%= rw.alamat %></td>
                     <td><%= rw.nama_kel %></td>
-                    <td><a href="rw/hapus/<%=rw.nama_ketua_rw %>" >hapus</a> </td>
+                    <td><a href="rw/hapus/<%=rw.id_U %>" >hapus</a> </td>
                     <td><a href="">Edit</a></td>
                 </tr>
                 <% i +=1; %> 
