--- a/views/Admin/users.ejs
+++ b/views/Admin/users.ejs
@@ -38,13 +38,11 @@
                         <td><%= i %> </td>
                         <td><%= user.nama %></td>
                         <td><%= user.role_u %></td>
-                        <td><a href="user/hapus/<%=user.id_U %>" >hapus</a> </td>
+                        <td><a href="users/hapus/<%=user.id_U %>" >hapus</a> </td>
                         <td><a href="">Edit</a></td>
                         <% i +=1; %> 
                     <%}%>
-                    
                 </tr>
-                
             <%} %> 
             
         </table>
