--- a/views/RW/statusrt.ejs
+++ b/views/RW/statusrt.ejs
@@ -14,6 +14,7 @@
         <img src="/assets/user.png" alt="">
     </header>
     <div class="sidenav">
+        <a href="homerw">Home</a>
         <a href="datart">Data RT</a>
         <a href="statusrt">Status Pesanan RT</a>
     </div>
