--- a/public/styleLogin.css
+++ b/public/styleLogin.css
@@ -30,6 +30,7 @@ body{
   line-height: 2em;
   letter-spacing: 0px;
 }
+
 .center form{
   padding: 0 40px;
   box-sizing: border-box;
@@ -90,7 +91,23 @@ input[type="submit"]{
   cursor: pointer;
   outline: none;
 }
+input[type="button"]{
+  width: 100%;
+  height: 50px;
+  border: 1px solid;
+  background: rgb(44, 68, 129);
+  border-radius: 25px;
+  font-size: 18px;
+  color: #e9f4fb;
+  font-weight: 700;
+  cursor: pointer;
+  outline: none;
+}
 input[type="submit"]:hover{
+  border-color: #2691d9;
+  transition: .5s;
+}
+input[type="button"]:hover{
   border-color: #2691d9;
   transition: .5s;
 }
