--- a/views/RT/akunwarga.ejs
+++ b/views/RT/akunwarga.ejs
@@ -11,16 +11,21 @@
 <body>
     <div class="center">
         <h1>Buat Akun Warga</h1>
-        <form method="post" action="/home">
+        <form method="post" action="/akunwarga">
+            <div class="text">
+                <input type="text" required name="namawarga">
+                <span></span>
+                <label>Nama Warga</label>
+            </div>
             <div class="text">
                 <input type="text" required name="username">
                 <span></span>
-                <label>Buat Username</label>
+                <label>Username</label>
             </div>
             <div class="text">
-                <input type="password" required name="password">
+                <input type="text" required name="password">
                 <span></span>
-                <label>Buat Password</label>
+                <label>Password</label>
             </div>
             <br>
             <input type="submit" value="Buat Akun">
