--- a/views/RT/pesananwarga.ejs
+++ b/views/RT/pesananwarga.ejs
@@ -14,6 +14,7 @@
         <img src="/assets/user.png" alt="">
     </header>
     <div class="sidenav">
+        <a href="homert">Home</a>
         <a href="datawarga">Data Warga</a>
         <a href="akunwarga">Buat Akun Warga</a>
         <a href="pesananwarga">Pesanan Warga</a>
