--- a/views/Warga/changepass.ejs
+++ b/views/Warga/changepass.ejs
@@ -24,6 +24,7 @@
             </div>
             <br>
             <input type="submit" value="Ganti Password">
+            <a href="/homewarga"><input type="button" value="Batal"></a>
             <br><br><br>
     </div>
     </form>
