--- a/views/Warga/homewarga.ejs
+++ b/views/Warga/homewarga.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styleadmin.css">
+    <link rel="stylesheet" href="stylewarga.css">
     <title>Home</title>
 </head>
 <body>
@@ -16,6 +16,7 @@
         <div class="content">
             <a class="a1" href="changepass">Change Password</a>
             <a class="a2" href="beliminyak">Beli Minyak</a>
+            <a class="a3" href="pesanansaya">Pesanan Saya</a>
         </div>
 </body>
 </html>
