--- a/views/Warga/changepass.ejs
+++ b/views/Warga/changepass.ejs
@@ -11,14 +11,14 @@
 <body>
     <div class="center">
         <h2>Ganti Password</h2>
-        <form method="post" action="/home">
+        <form method="post" action="/changepass">
             <div class="text">
                 <input type="password" required name="password">
                 <span></span>
                 <label>Password Sebelumnya</label>
             </div>
             <div class="text">
-                <input type="password" required name="password">
+                <input type="password" required name="newpassword">
                 <span></span>
                 <label>Password Baru</label>
             </div>
