--- a/views/Warga/beliminyak.ejs
+++ b/views/Warga/beliminyak.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylewarga.css">
+    <script src="/script/hitung.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -31,7 +32,7 @@
             </form>
             <br>
             <br>
-        <table>
+        <table id="harga">
             <tr>
                 <th>No</th>
                 <th>Nama Produk</th>
@@ -44,16 +45,19 @@
                 <tr>
                     <td><%= i %> </td>
                     <td><%= minyakgor.nama_minyak %></td>
-                    <td><%= minyakgor.harga %></td>
+                    <td><label class="hargaminyak" name="harga" value="<%=minyakgor.harga%>" ><%= minyakgor.harga %></label> </td>
                     <td><input type="number" class="inputminyak" name="quantity" min="0" max="5" value="0"></td>
+                    <td class="total"  style="text-align:center ;"></td>
                     <% i +=1; %> 
                 </tr>
             <%} %> 
             <tr>
                 <td colspan="4" style="text-align: center;">Total Harga</td>
-                <td style="text-align:center ;"></td>
+                <td id="hasiljumlah" style="text-align:center ;" name="jumlahharga"></td>
             </tr>
         </table>
+            <input style="margin-left:250px;margin-top: 5px;" type="button" value="Hitung" name='check'>
+            <br>
         <a class="ref" href="pembayaran">
             <input type="submit" value="Selesai" name='check'>
         </a>
